fixed the mobile view of home.php / data.php fixed the wrap content for mobile and fixed the horizontal scroll

--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   overflow-x: hidden;
   background-color: #001938;
 }
@@ -23,11 +23,11 @@ body {
   color: white;
   padding: 0 1.5rem;
   height: 15vh;
-  position: sticky ; 
+  position: sticky;
   top: 0;
   z-index: 1000;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 1);
-  font-family: 'Lucida Sans';
+  font-family: "Lucida Sans";
   border-bottom: 1px solid white;
 }
 
@@ -65,7 +65,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between; /* This ensures top & bottom spacing */
-
 }
 
 .left-nav h2 {
@@ -116,6 +115,7 @@ body {
   min-height: calc(100vh - 15vh);
   background-color: #001938;
   border-left: 1px solid #e2e8f0;
+  max-width: 90vw;
 }
 
 /* Menu Toggle Button */
@@ -126,7 +126,7 @@ body {
   font-size: 28px;
   cursor: pointer;
   display: none;
-} 
+}
 
 .left-nav .logout {
   display: block;
